--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,14 +1,24 @@
-html,
-body,
-#root,
-.App {
-    height: 100%;
+html
+{
+height: 100%;
+}
+body
+{
+    min-height: 100%;
+}
+
+#root{
+    height: 100vh;
+}
+
+.App{
+    min-height: 100%;
 }
 
 .div_all {
     display: flex;
     flex-direction: row;
-    height: 100%;
+    height: 100vh;
 
     background-image: url("../assets/images/top_bg_image.png");
     background-position: right top;
