--- a/src/styles/infor.css
+++ b/src/styles/infor.css
@@ -36,8 +36,8 @@
 }
 .div-border{
     text-align: center;
-    font-family: cursive;
-    font-size: 24px;
+    /* font-family: cursive; */
+    font-size: 20px;
     border: 1.5px solid black;
     padding: 2rem 1rem;
     min-height: 3em;
