--- a/src/styles/manage_users.css
+++ b/src/styles/manage_users.css
@@ -1,6 +1,34 @@
+.div_button_logout {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#button_logout {
+    cursor: pointer;
+    background-color: #40E3BD;
+    border-radius: 6px;
+    color: #FFFFFF;
+    border-color: rgba(0, 0, 0, 0);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #1A6557;
+}
+
 .div_dashboard {
-    height: 100%;
+    height: 100hv;
     background-color: #E8F8F8;
+}
+
+.div_dashboard .div_header {
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 64px;
+    padding-right: 64px;
+    background-color: #E8F8F8;
+
 }
 
 .div_content_dashboard {
@@ -119,6 +147,7 @@ td {
     margin-bottom: 32px;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
