--- a/src/styles/add_user.css
+++ b/src/styles/add_user.css
@@ -84,3 +84,32 @@
 .div_gender p{
     margin: 10px;
 }
+.div_convert{
+    display: flex;
+}
+.div_format2{
+    font-weight: bold;
+    margin-left: 20%;
+    margin-right: 5%;
+
+}
+.div_format2 input{
+    width: 100%;
+    margin-left: 12%;
+    height: 30px;
+    font-size: 20px;
+    padding: 10px 5px 10px 5px;
+}
+.div_format3{
+    font-weight: bold;
+    margin-left: 8%;
+    /* margin-right: 20%; */
+
+}
+.div_format3 input{
+    width: 100%;
+    margin-left: 5%;
+    height: 30px;
+    font-size: 20px;
+    padding: 10px 5px 10px 5px;
+}
